app/forum/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forum
  namespace: app
spec:
  selector:
    matchLabels:
      app: forum
  template:
    metadata:
      labels:
        app: forum
    spec:
      containers:
        - name: forum
          image: legendmt25/code-help:forum-0.0.1-SNAPSHOT
          resources:
            limits:
              memory: '1Gi'
              cpu: '500m'
          ports:
            - name: http
              containerPort: 3001
