app/forum/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forum-service
  namespace: app
spec:
  type: ClusterIP
  selector:
    app: forum
  ports:
    - name: http
      port: 80
      targetPort: 3001
